syntax = "proto3";

package syft.core.adp;

import "proto/lib/python/dict.proto";

message PrimeFactory {}

message VirtualMachinePrivateScalarManager {
  PrimeFactory prime_factory = 1;
  syft.lib.python.Dict prime2symbol = 2;
}
